...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_input"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="JJ/MM/AAAA"
                    android:padding="16dp"
                    android:textColor="@color/md_onBackground"
                    android:textColorHint="@color/gray_500"
                    android:textSize="16sp" />

                <Button
...
