appId: com.etix
---
- launchApp

- assertVisible: "Nom d’utilisateur"
- assertVisible: "Mot de passe"
- assertVisible: "Se connecter"
- assertVisible: "Créer un compte"

- tapOn: "Nom d’utilisateur"
- inputText: "nourdine_qa"

- pressKey: enter
- inputText: "Test@1234"

- hideKeyboard

- tapOn: "Se connecter"

- assertVisible: "Accueil"
- assertVisible: "Ajouter"
- assertVisible: "Historique"
