appId: com.etix
---
- launchApp

- assertVisible: "Nom d’utilisateur"
- assertVisible: "Mot de passe"
- assertVisible: "Se connecter"

- tapOn: "Nom d’utilisateur"
- inputText: "nourdine_qa"

- pressKey: enter
- inputText: "Mauvais123"

- hideKeyboard

- tapOn: "Se connecter"

- assertVisible: "Identifiants incorrects"

- assertVisible: "Nom d’utilisateur"
- assertVisible: "Mot de passe"
- assertVisible: "Se connecter"
